--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 html {
   box-sizing: border-box;
 }
-*{
-  box-sizing: inheirt;
+
+* {
+  box-sizing: inherit;
 }
+
 body {
   background-color: #fdf6e3;
 }
